# perovskite-data-analysis

./: .gitignore  pyproject.toml
data/enrich/: phases.parquet  structures.parquet
data/oqmd/raw/: phases.parquet  structures.parquet
ml_models/: xgboost_band_gap.json
notebooks/: band_gap_prediction.ipynb  data_preparation.ipynb  stability_prediction.ipynb  stacks_and_deposition_mapping.json
preparation/: prepare_raw_idc2.ipynb  xgboost_band_gap_model.ipynb
saved_models/: xgboost_band_gap_3D.json
src/analysis/: mp.ipynb
src/client/common/: base_client.py
src/client/oqmd/: client.py  paginator.py
src/data_handler/common/: base_client.py  data_features.py  element_features.py
src/data_handler/oqmd/: client.py  loader.py  perovskite_data.py  transform.py
src/perovskite_data_analysis/common/: base_client.py  data_features.py  entities.py  storage.py
src/perovskite_data_analysis/entities/: column_names.py  elements.py  space_group.py  structure.py
src/perovskite_data_analysis/features/: charge.py  factors.py  structure.py
src/perovskite_data_analysis/materials_project/: raw_client.py
src/perovskite_data_analysis/oqmd/: client.py  configuration.py  enrich.py  loader.py  perovskite_data.py
src/perovskite_data_analysis/oqmd_etl/: client.py  configuration.py  enrich.py  loader.py  perovskite_data.py
src/perovskite_prediction_api/api/: components.py
src/perovskite_prediction_api/common/: storage.py
src/perovskite_prediction_api/entities/: dictioanary.py  entities.py
src/perovskite_prediction_api/entities/v1/: elements.py  layers.py  structure.py
src/perovskite_prediction_api/features/: structure_features.py
src/perovskite_prediction_api/repository/: model_repository.py
src/perovskite_prediction_api/tests/: assertions.py  conftest.py
src/perovskite_prediction_api/tests/functional/: test_common.py
src/perovskite_prediction_api/tests/test_data/: df_calcs.parquet  df_phases.parquet
src/perovskite_prediction_api/tests/unit/: test_oqmd_client.py
tests/: assertions.py  conftest.py
tests/functional/: test_common.py  test_get_data.py  test_get_perovskite.py
tests/test_data/: df_structure.parquet
tests/unit/: test_common.py  test_google_storage.py  test_oqmd_client.py
