[tool.poetry]
name = "perovskite-analysis"
version = "0.0.1"
authors = ["Arman Hovhannisyan <hovhannisyanarman062@gmail.com>"]
description = "Perovskite analysis with ML"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.0"

pandas = "^2.2.3"
numpy = "^2.2.1"
matplotlib = "3.10.0"
seaborn = "0.13.2"
scikit-learn = "1.6.1"
scipy = "^1.7.3"

httpx = "^0.28.1"


[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.23.2"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

pythonpath = [
    "src",
    "tests"
]
