[tool.poetry]
name = "perovskite-data-analysis"
version = "0.0.2"
authors = ["Arman Hovhannisyan <hovhannisyanarman062@gmail.com>"]
description = "Perovskite analysis with ML"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.0"
pymatgen = "2024.10.3"
pandas = "^2.2.3"
numpy = "1.26.4"
matplotlib = "3.10.0"
seaborn = "0.13.2"
scikit-learn = "1.6.1"
scipy = "^1.7.3"
pyarrow = "^18.1.0"
httpx = "^0.28.1"
google-api-python-client = "2.163.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.1"
openpyxl = "3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.23.2"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

pythonpath = [
    "src",
    "tests"
]
